/**
 * An example of an abstract method
 */

import java.util.ArrayList;

public abstract class GenericQuizGenerator {


    public abstract ArrayList<Question> getData(String fileName);


}