public interface Result {
    double percentCorrect();
}
