@startuml

title __SRC's Class Diagram__\n

  package  {
    abstract class GenericQuizGenerator {
        {abstract} + getData()
    }
  }
  

  package  {
    class Question {
        - questionNumber : int
        - questionText : String
        - questionAnswer : Double
        + Question()
        + getQuestionNumber()
        + setQuestionNumber()
        + getQuestionText()
        + setQuestionText()
        + getQuestionAnswer()
        + setQuestionAnswer()
        + toString()
    }
  }
  

  package  {
    class QuizDriver {
        {static} + main()
        {static} + goodbye()
    }
  }
  

  package  {
    class QuizGenerator {
        - quizTime : int
        - name : String
        - score : Double
        {static} + createQuiz()
        + getData()
    }
  }
  

  package  {
    class QuizResult {
        - questionsCorrect : int
        - numQuestions : int
        + percentCorrect()
        + QuizResult()
    }
  }
  

  package  {
    class QuizUIJOP {
        {static} ~ ansCorrect : int
        ~ userName : String
        ~ quizQuestions : ArrayList<Question>
        ~ QuizUIJOP()
        - writeResults()
    }
  }
  

  package  {
    interface Result {
        {abstract} + percentCorrect()
    }
  }
  

  QuizGenerator -up-|> GenericQuizGenerator
  QuizResult -up-|> Result


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
